--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); }
 
+#main-img {
+  width: 100%;
+  height: 360px;
+  background-image: url("walk-dog.jpg");
+  background-size: cover;
+  border-top: 4px solid lightblue;
+  border-bottom: 4px solid lightblue; }
+
 #top-spacer {
   height: 0px; }
 
