--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,15 @@ body {
     text-shadow: 1px 1px 1px rgba(0,0,0,.2);
 }
 
+//holds main image
+#main-img {
+	width: 100%;
+	height: 360px;
+	background-image: url("walk-dog.jpg");
+	background-size: cover;
+	border-top: 4px solid lightblue;
+	border-bottom: 4px solid lightblue;
+}
 #top-spacer {
 	height:0px;
 //	height:105px;
