--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ a:hover {
   box-sizing: border-box; }
 
 .heading, .subheading {
+  padding-left: 10px;
   letter-spacing: 20px;
   width: 100%;
   background: #3d668f;
@@ -228,6 +229,12 @@ a:hover {
 .circles-row {
   width: 60%;
   margin: auto; }
+  @media screen and (max-width: 700px) {
+    .circles-row {
+      width: 95%; } }
+  @media screen and (max-width: 500px) {
+    .circles-row {
+      width: 100%; } }
 
 .textbox {
   background: white;
