--- a/style.scss
+++ b/style.scss
@@ -171,6 +171,7 @@ a:hover {text-decoration:none;}
 }
 
 .heading, .subheading {
+	padding-left: 10px;
 	letter-spacing: 20px;
 	width: 100%;
 	background: $background-color;
@@ -311,6 +312,12 @@ a:hover {text-decoration:none;}
 
 .circles-row {
 	width:60%;
+	@media screen and (max-width: 700px) {
+		width: 95%;
+	}
+	@media screen and (max-width: 500px) {
+		width: 100%;
+	}
 	margin: auto;
 }
 
