--- a/style.scss
+++ b/style.scss
@@ -321,6 +321,10 @@ a:hover {text-decoration:none;}
 	margin: auto;
 }
 
+.grey-text {
+	color: grey;
+}
+
 .textbox {
 	background: white;
 	width:85%;
