--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,13 @@ $bam-color: orange;
 	box-shadow:$top $left $blur $color #{$inset};
 }
 
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
 
 
 html,
@@ -204,6 +211,8 @@ a:hover {text-decoration:none;}
 	background: $nav-background;
 	color: $nav-color;
 
+	//@include transition (.1s);
+
 	h1, li, ul {
 		display: inline-block;
 		margin: 0;
@@ -253,7 +262,7 @@ a:hover {text-decoration:none;}
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 767px) {
 		left: 0px;
     width: 100%;
 		border-bottom-left-radius: 0px;
@@ -269,12 +278,16 @@ a:hover {text-decoration:none;}
 	border-top-right-radius: 5px;
 
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 767px) {
     right:0;
 		border-top-right-radius: 0px;
-
   }
-
+//  @media screen and (max-width: 490px) {
+//    right:0;
+//		width: 100%;
+//		border-top-right-radius: 0px;
+//		border-top-left-radius: 0px;
+//  }
 }
 .textbox-link {
 	a:hover {
@@ -312,7 +325,7 @@ a:hover {text-decoration:none;}
 
 .circles-row {
 	width:60%;
-	@media screen and (max-width: 700px) {
+	@media screen and (max-width: 767px) {
 		width: 95%;
 	}
 	@media screen and (max-width: 500px) {
