--- a/style.scss
+++ b/style.scss
@@ -137,11 +137,19 @@ a:hover {text-decoration:none;}
 	margin-bottom: 20px;
 	border: 4px solid lightblue;
 
+  @media screen and (max-width: 500px) {
+    width: 80px;
+		height: 80px;
+  }
+
 	h1, a {
 		color: black;
 		font-size:26px;
 		padding-top: 10px;
 		text-align: center;
+		@media screen and (max-width: 500px) {
+			padding-top: 1px;
+		}
 	}
 
 
@@ -150,6 +158,7 @@ a:hover {text-decoration:none;}
 		background:lightblue;
 		border: 4px solid white;
 		@include box-shadow (0px,0px,10px, $nav-background);
+		cursor: pointer;
 	}
 }
 .content-holder {
@@ -204,6 +213,23 @@ a:hover {text-decoration:none;}
 	height: 100px;
 }
 
+#contact-social {
+	margin: 0;
+	padding: 0;
+	li {
+		display: inline-block;
+		.fa {
+			font-size: 40px;
+			color: $background-color;
+		}
+		&:hover {
+			.fa {
+					color: $nav-background;
+					cursor: pointer;
+				}
+			}
+	}
+}
 #navbar, #socialbar {
 	z-index: 1000;
 	position: fixed;
@@ -219,7 +245,7 @@ a:hover {text-decoration:none;}
 		display: inline-block;
 		margin: 0;
 
-		-webkit-transition: 2s;
+		//-webkit-transition: 2s;
 	}
 	span a {
 		color: white;
@@ -296,6 +322,7 @@ a:hover {text-decoration:none;}
 		text-decoration:none;
 	}
 	&:hover {
+		cursor: pointer;
 		text-decoration: none;
 		border: 2px solid white;
 		background: lightblue;
