--- a/style.css
+++ b/style.css
@@ -87,8 +87,9 @@ a:hover {
   border: 4px solid lightblue; }
   @media screen and (max-width: 500px) {
     .circle {
-      width: 80px;
-      height: 80px; } }
+      width: 70px;
+      height: 70px;
+      margin: auto; } }
   .circle h1, .circle a {
     color: black;
     font-size: 26px;
@@ -96,7 +97,9 @@ a:hover {
     text-align: center; }
     @media screen and (max-width: 500px) {
       .circle h1, .circle a {
-        padding-top: 1px; } }
+        padding-top: 0px;
+        margin-top: 17px;
+        font-size: 22px; } }
   .circle:hover {
     text-decoration: none;
     background: lightblue;
