--- a/style.scss
+++ b/style.scss
@@ -136,10 +136,12 @@ a:hover {text-decoration:none;}
 	margin: auto;
 	margin-bottom: 20px;
 	border: 4px solid lightblue;
+	//margin-left: -5px;
 
   @media screen and (max-width: 500px) {
-    width: 80px;
-		height: 80px;
+    width: 70px;
+		height: 70px;
+		margin: auto;
   }
 
 	h1, a {
@@ -148,7 +150,9 @@ a:hover {text-decoration:none;}
 		padding-top: 10px;
 		text-align: center;
 		@media screen and (max-width: 500px) {
-			padding-top: 1px;
+			padding-top: 0px;
+			margin-top: 17px;
+			font-size: 22px;
 		}
 	}
 
@@ -361,6 +365,7 @@ a:hover {text-decoration:none;}
 		width: 100%;
 	}
 	margin: auto;
+	//text-align: center;
 }
 
 .grey-text {
